[gd_scene load_steps=6 format=3 uid="uid://c0605gi3euibn"]

[ext_resource type="Script" path="res://Scripts/level_interface.gd" id="1_3dpav"]
[ext_resource type="Texture2D" uid="uid://ct5w5orw622j6" path="res://Assets/Visuals/ProgressBar.png" id="2_alxet"]
[ext_resource type="Texture2D" uid="uid://dn6a7phkrtcaf" path="res://Assets/Visuals/PlaceholderChoiceButton.png" id="3_b4nyu"]

[sub_resource type="ImageTexture" id="ImageTexture_edcf1"]

[sub_resource type="ImageTexture" id="ImageTexture_4vjo2"]

[node name="GameplayInterface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3dpav")

[node name="HPBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 20.0
offset_right = 64.0
offset_bottom = 36.0
grow_horizontal = 2
max_value = 3.0
step = 0.1
value = 3.0
texture_under = ExtResource("2_alxet")
texture_over = SubResource("ImageTexture_edcf1")
texture_progress = ExtResource("2_alxet")
tint_under = Color(0.24, 0.0144, 0.0144, 1)
tint_over = Color(0, 1, 0, 1)
tint_progress = Color(0, 0.56, 0, 1)

[node name="HungerBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_top = 60.0
offset_right = 65.0
offset_bottom = 76.0
grow_horizontal = 2
max_value = 5.0
step = 0.1
texture_under = ExtResource("2_alxet")
texture_over = SubResource("ImageTexture_4vjo2")
texture_progress = ExtResource("2_alxet")
tint_under = Color(0.136719, 0.0792456, 0.0532894, 1)
tint_over = Color(1, 0.769606, 0.460428, 1)
tint_progress = Color(0.757813, 0.362059, 0.207183, 1)

[node name="SprintEnergy" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -458.0
offset_top = 508.0
offset_right = -330.0
offset_bottom = 524.0
grow_horizontal = 2
max_value = 5.0
step = 0.1
texture_under = ExtResource("2_alxet")
texture_over = SubResource("ImageTexture_4vjo2")
texture_progress = ExtResource("2_alxet")
tint_under = Color(0.136719, 0.0792456, 0.0532894, 1)
tint_over = Color(1, 0.769606, 0.460428, 1)
tint_progress = Color(0.757813, 0.362059, 0.207183, 1)

[node name="RoundStartPopup1" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="RoundStartPopup1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundStartPopup1/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="RoundStartPopup1/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="RoundStartPopup1/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Welcome to the era!
Here's a tutorial or whatever.
In later eras you'll pick a dino here."

[node name="RoundStartButton" type="Button" parent="RoundStartPopup1/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CONTINUE"

[node name="RoundStartPopup2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundStartPopup2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="RoundStartPopup2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="RoundStartPopup2"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0

[node name="DinoChoice1" type="TextureButton" parent="RoundStartPopup2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("3_b4nyu")
texture_pressed = ExtResource("3_b4nyu")
texture_hover = ExtResource("3_b4nyu")

[node name="Label" type="Label" parent="RoundStartPopup2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dino 1
Size+"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="RoundStartPopup2"]
layout_mode = 0
offset_left = 300.0
offset_right = 500.0
offset_bottom = 300.0

[node name="DinoChoice2" type="TextureButton" parent="RoundStartPopup2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("3_b4nyu")
texture_pressed = ExtResource("3_b4nyu")
texture_hover = ExtResource("3_b4nyu")

[node name="Label2" type="Label" parent="RoundStartPopup2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dino 2
Speed+"
horizontal_alignment = 1

[node name="RoundStartPopup3" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundStartPopup3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="RoundStartPopup3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="RoundStartPopup3"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0

[node name="DinoChoice11" type="TextureButton" parent="RoundStartPopup3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("3_b4nyu")
texture_pressed = ExtResource("3_b4nyu")
texture_hover = ExtResource("3_b4nyu")

[node name="Label" type="Label" parent="RoundStartPopup3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dino 1-1
Size+"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="RoundStartPopup3"]
layout_mode = 0
offset_left = 300.0
offset_right = 500.0
offset_bottom = 300.0

[node name="DinoChoice12" type="TextureButton" parent="RoundStartPopup3/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("3_b4nyu")
texture_pressed = ExtResource("3_b4nyu")
texture_hover = ExtResource("3_b4nyu")

[node name="Label2" type="Label" parent="RoundStartPopup3/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dino 1-2
Speed+"
horizontal_alignment = 1

[node name="RoundStartPopup4" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundStartPopup4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="RoundStartPopup4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="RoundStartPopup4"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0

[node name="DinoChoice21" type="TextureButton" parent="RoundStartPopup4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("3_b4nyu")
texture_pressed = ExtResource("3_b4nyu")
texture_hover = ExtResource("3_b4nyu")

[node name="Label" type="Label" parent="RoundStartPopup4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dino 2-1
Size+"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="RoundStartPopup4"]
layout_mode = 0
offset_left = 300.0
offset_right = 500.0
offset_bottom = 300.0

[node name="DinoChoice22" type="TextureButton" parent="RoundStartPopup4/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.5
texture_normal = ExtResource("3_b4nyu")
texture_pressed = ExtResource("3_b4nyu")
texture_hover = ExtResource("3_b4nyu")

[node name="Label2" type="Label" parent="RoundStartPopup4/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Dino 2-2
Speed+"
horizontal_alignment = 1

[node name="RoundEndedPopup" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="RoundEndedPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="RoundEndedPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="RoundEndedPopup/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="RichTextLabel" parent="RoundEndedPopup/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Era ended!"

[node name="RoundEndButton" type="Button" parent="RoundEndedPopup/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CONTINUE"

[connection signal="pressed" from="RoundStartPopup1/Control/VBoxContainer/RoundStartButton" to="." method="_on_round_start_button_pressed"]
[connection signal="pressed" from="RoundStartPopup2/VBoxContainer/DinoChoice1" to="." method="_on_dino_choice_1_pressed"]
[connection signal="pressed" from="RoundStartPopup2/VBoxContainer2/DinoChoice2" to="." method="_on_dino_choice_2_pressed"]
[connection signal="pressed" from="RoundStartPopup3/VBoxContainer/DinoChoice11" to="." method="_on_dino_choice_11_pressed"]
[connection signal="pressed" from="RoundStartPopup3/VBoxContainer2/DinoChoice12" to="." method="_on_dino_choice_12_pressed"]
[connection signal="pressed" from="RoundStartPopup4/VBoxContainer/DinoChoice21" to="." method="_on_dino_choice_21_pressed"]
[connection signal="pressed" from="RoundStartPopup4/VBoxContainer2/DinoChoice22" to="." method="_on_dino_choice_22_pressed"]
[connection signal="pressed" from="RoundEndedPopup/Control/VBoxContainer/RoundEndButton" to="." method="_on_round_end_button_pressed"]
